Add complete HTML structure for personal website

--- a/index.html
+++ b/index.html
@@ -1,1 +1,90 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Chandan Kumar | Web3 Developer</title>
+  <link rel="stylesheet" href="style.css" />
+</head>
 
+<body>
+  <!-- HERO SECTION -->
+  <header class="hero">
+    <h1>Chandan Kumar</h1>
+    <h2>Web3 Developer — Solidity | dApps | Wallet Integration</h2>
+    <p>I build secure smart contracts, NFT applications, and blockchain-based solutions.</p>
+
+    <div class="buttons">
+      <a href="#contact" class="btn">Hire Me</a>
+      <a href="#projects" class="btn-outline">View Projects</a>
+    </div>
+  </header>
+
+  <!-- ABOUT SECTION -->
+  <section id="about" class="section">
+    <h2>About Me</h2>
+    <p>
+      I am a blockchain & Web3 developer with hands-on experience in Solidity,
+      decentralized application development, and wallet integrations such as MetaMask.
+      I focus on writing clean, secure, and scalable smart contracts and building
+      user-friendly dApps using modern tools like Hardhat, Ethers.js, and JavaScript.
+    </p>
+  </section>
+
+  <!-- PROJECTS SECTION -->
+  <section id="projects" class="section">
+    <h2>Projects</h2>
+
+    <div class="project-card">
+      <h3>EventDemo dApp</h3>
+      <p>Smart contract with event logging + MetaMask wallet integration.</p>
+      <a href="#" class="project-link">Live Demo</a>
+      <a href="#" class="project-link">GitHub</a>
+    </div>
+
+    <div class="project-card">
+      <h3>NFT Minter dApp</h3>
+      <p>Upload → Mint → View NFT using an ERC721 Solidity contract.</p>
+      <a href="#" class="project-link">Live Demo</a>
+      <a href="#" class="project-link">GitHub</a>
+    </div>
+
+    <div class="project-card">
+      <h3>Token Generator (ERC20)</h3>
+      <p>Create and deploy custom ERC20 tokens using a clean UI.</p>
+      <a href="#" class="project-link">Live Demo</a>
+      <a href="#" class="project-link">GitHub</a>
+    </div>
+  </section>
+
+  <!-- SERVICES SECTION -->
+  <section id="services" class="section">
+    <h2>Services</h2>
+    <ul>
+      <li>Smart Contract Development (Solidity)</li>
+      <li>dApp Development (Frontend + Blockchain)</li>
+      <li>MetaMask / WalletConnect Integration</li>
+      <li>NFT & Token Creation (ERC20, ERC721, ERC1155)</li>
+      <li>Smart Contract Audit & Bug Fixing</li>
+    </ul>
+  </section>
+
+  <!-- CONTACT SECTION -->
+  <section id="contact" class="section">
+    <h2>Contact Me</h2>
+    <p>Email: your-email@example.com</p>
+    <p>WhatsApp: +91-XXXXXXXXXX</p>
+    <p>GitHub: your-github-link</p>
+    <p>Instagram: @risha.bh00007</p>
+
+    <form class="contact-form">
+      <input type="text" placeholder="Your Name" required />
+      <input type="email" placeholder="Your Email" required />
+      <textarea placeholder="Your Message" required></textarea>
+      <button type="submit">Send Message</button>
+    </form>
+  </section>
+
+  <script src="script.js"></script>
+</body>
+</html>
