Update project links and contact information

--- a/index.html
+++ b/index.html
@@ -38,8 +38,9 @@
     <div class="project-card">
       <h3>EventDemo dApp</h3>
       <p>Smart contract with event logging + MetaMask wallet integration.</p>
-      <a href="#" class="project-link">Live Demo</a>
-      <a href="#" class="project-link">GitHub</a>
+      
+     <a href="https://rishabhdev007.github.io/EventDemo/" class="project-link" target="_blank">Live Demo</a>
+      <a href="https://github.com/Rishabhdev007/EventDemo" class="project-link" target="_blank">GitHub</a>
     </div>
 
     <div class="project-card">
@@ -72,9 +73,9 @@
   <!-- CONTACT SECTION -->
   <section id="contact" class="section">
     <h2>Contact Me</h2>
-    <p>Email: your-email@example.com</p>
-    <p>WhatsApp: +91-XXXXXXXXXX</p>
-    <p>GitHub: your-github-link</p>
+    <p>Email: chandanmaxx0007@gmail.com</p>
+    <p>WhatsApp: +91-9711556454</p>
+    <p>GitHub: github.com/Rishabhdev007</p>
     <p>Instagram: @risha.bh00007</p>
 
     <form class="contact-form">
