Update Live Demo link for EventDemo project

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       <h3>EventDemo dApp</h3>
       <p>Smart contract with event logging + MetaMask wallet integration.</p>
       
-     <a href="https://rishabhdev007.github.io/EventDemo/" class="project-link" target="_blank">Live Demo</a>
+     <a href="https://rishabhdev007.github.io/event-demo/" class="project-link" target="_blank">Live Demo</a>
       <a href="https://github.com/Rishabhdev007/EventDemo" class="project-link" target="_blank">GitHub</a>
     </div>
 
