Fix GitHub link in index.html

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       <p>Smart contract with event logging + MetaMask wallet integration.</p>
       
      <a href="https://rishabhdev007.github.io/event-demo/" class="project-link" target="_blank">Live Demo</a>
-      <a href="https://github.com/Rishabhdev007/EventDemo" class="project-link" target="_blank">GitHub</a>
+      <a href="https://rishabhdev007.github.io/event-demo/" class="project-link" target="_blank">GitHub</a>
     </div>
 
     <div class="project-card">
