--- a/index.html
+++ b/index.html
@@ -3,16 +3,17 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Chandan Kumar | Web3 Developer</title>
+  <title>Chandan Kumar | Web3 Developer Portfolio</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 
 <body>
-  <!-- HERO SECTION -->
-  <header class="hero">
+
+  <!-- HERO -->
+  <header class="hero fade-in">
     <h1>Chandan Kumar</h1>
-    <h2>Web3 Developer — Solidity | dApps | Wallet Integration</h2>
-    <p>I build secure smart contracts, NFT applications, and blockchain-based solutions.</p>
+    <h2>Web3 Developer — Smart Contracts | dApps | Wallet Integrations</h2>
+    <p>I build scalable blockchain-based applications, secure smart contracts, and user-friendly decentralized tools.</p>
 
     <div class="buttons">
       <a href="#contact" class="btn">Hire Me</a>
@@ -20,22 +21,86 @@
     </div>
   </header>
 
-  <!-- ABOUT SECTION -->
-  <section id="about" class="section">
+  <!-- ABOUT -->
+  <section id="about" class="section fade-in">
     <h2>About Me</h2>
     <p>
-      I am a blockchain & Web3 developer with hands-on experience in Solidity,
-      decentralized application development, and wallet integrations such as MetaMask.
-      I focus on writing clean, secure, and scalable smart contracts and building
-      user-friendly dApps using modern tools like Hardhat, Ethers.js, and JavaScript.
+      I am a Web3 & blockchain developer with practical experience in Solidity, smart contract development,
+      EVM chains, wallet integrations, and building full-stack decentralized applications.  
+      I create tools such as NFT Minters, Token Generators, Wallet Trackers, Gas Trackers, and more.
     </p>
   </section>
 
-  <!-- PROJECTS SECTION -->
-  <section id="projects" class="section">
-    <h2>Projects</h2>
 
-    <div class="project-card">
+  <!-- PROJECTS SECTION -->
+  <section id="projects" class="section fade-in">
+    <h2>My Live Web3 Projects</h2>
+
+    <!-- 1. GAS FEE TRACKER -->
+    <div class="project-card fade-in">
+      <h3>Gas Fee Tracker</h3>
+      <p>Real-time Ethereum gas tracker using Ethers.js and live RPC feeds.</p>
+      <a href="https://rishabhdev007.github.io/gas-fee-tracker/" target="_blank" class="project-link">Live Demo</a>
+      <a href="https://github.com/Rishabhdev007/gas-fee-tracker" target="_blank" class="project-link">GitHub</a>
+    </div>
+
+    <!-- 2. MAIN PORTFOLIO -->
+    <div class="project-card fade-in">
+      <h3>Portfolio Website</h3>
+      <p>My complete Web3 developer portfolio hosted on GitHub Pages.</p>
+      <a href="https://rishabhdev007.github.io/chandan-portfolio/" target="_blank" class="project-link">Live Portfolio</a>
+      <a href="https://github.com/Rishabhdev007/chandan-portfolio" target="_blank" class="project-link">GitHub</a>
+    </div>
+
+    <!-- 3. WALLET BALANCE TRACKER -->
+    <div class="project-card fade-in">
+      <h3>Wallet Balance Tracker</h3>
+      <p>Track ETH or token balance in any wallet using RPC calls.</p>
+      <a href="https://rishabhdev007.github.io/wallet-balance-dapp/" target="_blank" class="project-link">Live Demo</a>
+      <a href="https://github.com/Rishabhdev007/wallet-balance-dapp" target="_blank" class="project-link">GitHub</a>
+    </div>
+
+    <!-- 4. RAFFLE (LOTTERY) DAPP -->
+    <div class="project-card fade-in">
+      <h3>Raffle / Lottery Smart Contract dApp</h3>
+      <p>Users join a lottery pool; smart contract picks a random winner.</p>
+      <a href="https://rishabhdev007.github.io/raffle-app/" target="_blank" class="project-link">Live Demo</a>
+      <a href="https://github.com/Rishabhdev007/raffle-app" target="_blank" class="project-link">GitHub</a>
+    </div>
+
+    <!-- 5. TOKEN PRICE TRACKER -->
+    <div class="project-card fade-in">
+      <h3>Token Price Tracker</h3>
+      <p>Live token prices using CoinGecko API + clean UI.</p>
+      <a href="https://rishabhdev007.github.io/token-price-tracker/" target="_blank" class="project-link">Live Demo</a>
+      <a href="https://github.com/Rishabhdev007/token-price-tracker" target="_blank" class="project-link">GitHub</a>
+    </div>
+
+    <!-- 6. WALLET BALANCE TRACKER (Duplicate Removed) -->
+
+    <!-- 7. SIL Ledger dApp -->
+    <div class="project-card fade-in">
+      <h3>SIM Ledger dApp</h3>
+      <p>Blockchain ledger for recording SIM activities securely.</p>
+      <a href="https://rishabhdev007.github.io/sim-ledger-dapp/" target="_blank" class="project-link">Live Demo</a>
+      <a href="https://github.com/Rishabhdev007/sim-ledger-dapp" target="_blank" class="project-link">GitHub</a>
+    </div>
+
+    <!-- 8. VERCEL RAFFLE DAPP -->
+    <div class="project-card fade-in">
+      <h3>Raffle App (Vercel Deployment)</h3>
+      <p>Vercel version of the Raffle smart contract application.</p>
+      <a href="https://raffle-app-steel.vercel.app" target="_blank" class="project-link">Vercel Demo</a>
+    </div>
+
+    <!-- 9. TOKEN DASHBOARD -->
+    <div class="project-card fade-in">
+      <h3>My Token Dashboard</h3>
+      <p>Token portfolio dashboard with real-time price and balance updates.</p>
+      <a href="https://my-token-dashboard.vercel.app/" target="_blank" class="project-link">Live Demo</a>
+    </div>
+    <!--10. Event Demo-->
+     <div class="project-card">
       <h3>EventDemo dApp</h3>
       <p>Smart contract with event logging + MetaMask wallet integration.</p>
       
@@ -43,39 +108,29 @@
       <a href="https://rishabhdev007.github.io/event-demo/" class="project-link" target="_blank">GitHub</a>
     </div>
 
-    <div class="project-card">
-      <h3>NFT Minter dApp</h3>
-      <p>Upload → Mint → View NFT using an ERC721 Solidity contract.</p>
-      <a href="#" class="project-link">Live Demo</a>
-      <a href="#" class="project-link">GitHub</a>
-    </div>
-
-    <div class="project-card">
-      <h3>Token Generator (ERC20)</h3>
-      <p>Create and deploy custom ERC20 tokens using a clean UI.</p>
-      <a href="#" class="project-link">Live Demo</a>
-      <a href="#" class="project-link">GitHub</a>
-    </div>
   </section>
 
-  <!-- SERVICES SECTION -->
-  <section id="services" class="section">
+
+  <!-- SERVICES -->
+  <section id="services" class="section fade-in">
     <h2>Services</h2>
     <ul>
       <li>Smart Contract Development (Solidity)</li>
       <li>dApp Development (Frontend + Blockchain)</li>
       <li>MetaMask / WalletConnect Integration</li>
-      <li>NFT & Token Creation (ERC20, ERC721, ERC1155)</li>
-      <li>Smart Contract Audit & Bug Fixing</li>
+      <li>Token/NFT Creation (ERC20, ERC721, ERC1155)</li>
+      <li>Smart Contract Bug Fixing & Deployment</li>
     </ul>
   </section>
 
-  <!-- CONTACT SECTION -->
-  <section id="contact" class="section">
+
+  <!-- CONTACT -->
+  <section id="contact" class="section fade-in">
     <h2>Contact Me</h2>
-    <p>Email: chandanmaxx0007@gmail.com</p>
-    <p>WhatsApp: +91-9711556454</p>
-    <p>GitHub: github.com/Rishabhdev007</p>
+    <p>Email: <a href="mailto:chandanmaxx0007@gmail.com">chandanmaxx0007@gmail.com</a></p>
+    <p>WhatsApp: 9711556454</p>
+    <p>GitHub: <a href="https://github.com/Rishabhdev007" target="_blank">github.com/Rishabhdev007</a></p>
+    <p>LinkedIn: <a href="https://linkedin.com/in/chandan-kumar-a148ba387" target="_blank">linkedin.com/in/chandan-kumar-a148ba387</a></p>
     <p>Instagram: @risha.bh00007</p>
 
     <form class="contact-form">
@@ -85,6 +140,7 @@
       <button type="submit">Send Message</button>
     </form>
   </section>
+
 
   <script src="script.js"></script>
 </body>
