--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
   </header>
 
   <!-- ABOUT -->
+  
   <section id="about" class="section fade-in">
     <h2>About Me</h2>
     <p>
@@ -30,7 +31,23 @@
       I create tools such as NFT Minters, Token Generators, Wallet Trackers, Gas Trackers, and more.
     </p>
   </section>
+<section id="techstack" class="section fade-in">
+  <h2>Tech Stack</h2>
 
+  <div class="tech-container">
+    <span class="tech-item">Solidity</span>
+    <span class="tech-item">JavaScript</span>
+    <span class="tech-item">Ethers.js</span>
+    <span class="tech-item">Web3.js</span>
+    <span class="tech-item">Hardhat</span>
+    <span class="tech-item">HTML</span>
+    <span class="tech-item">CSS</span>
+    <span class="tech-item">GitHub Pages</span>
+    <span class="tech-item">Vercel</span>
+    <span class="tech-item">MetaMask Integration</span>
+    <span class="tech-item">RPC / Blockchain APIs</span>
+  </div>
+</section>
 
   <!-- PROJECTS SECTION -->
   <section id="projects" class="section fade-in">
