--- a/index.html
+++ b/index.html
@@ -48,7 +48,40 @@
     <span class="tech-item">RPC / Blockchain APIs</span>
   </div>
 </section>
+<section id="featured" class="section fade-in">
+  <h2>Featured Projects</h2>
 
+  <!-- Token Dashboard -->
+  <div class="project-card fade-in">
+    <h3>My Token Dashboard</h3>
+    <p>Real-time token price & balance dashboard with a clean, interactive interface.</p>
+    <a href="https://my-token-dashboard.vercel.app/" target="_blank" class="project-link">Live Demo</a>
+  </div>
+
+  <!-- Raffle App (Vercel) -->
+  <div class="project-card fade-in">
+    <h3>Raffle App (Vercel)</h3>
+    <p>Decentralized lottery dApp deployed on Vercel with wallet integration and secure smart contracts.</p>
+    <a href="https://raffle-app-steel.vercel.app" target="_blank" class="project-link">Live Demo</a>
+  </div>
+
+  <!-- Gas Fee Tracker -->
+  <div class="project-card fade-in">
+    <h3>Gas Fee Tracker</h3>
+    <p>Track live Ethereum network gas fees using public RPC endpoints and Ethers.js.</p>
+    <a href="https://rishabhdev007.github.io/gas-fee-tracker/" target="_blank" class="project-link">Live Demo</a>
+    <a href="https://github.com/Rishabhdev007/gas-fee-tracker" target="_blank" class="project-link">GitHub</a>
+  </div>
+
+  <!-- Token Price Tracker -->
+  <div class="project-card fade-in">
+    <h3>Token Price Tracker</h3>
+    <p>Live cryptocurrency price tracking using CoinGecko API with smooth UI.</p>
+    <a href="https://rishabhdev007.github.io/token-price-tracker/" target="_blank" class="project-link">Live Demo</a>
+    <a href="https://github.com/Rishabhdev007/token-price-tracker" target="_blank" class="project-link">GitHub</a>
+  </div>
+
+</section>
   <!-- PROJECTS SECTION -->
   <section id="projects" class="section fade-in">
     <h2>My Live Web3 Projects</h2>
