--- a/index.html
+++ b/index.html
@@ -51,112 +51,71 @@
 <section id="featured" class="section fade-in">
   <h2>Featured Projects</h2>
 
+  <section id="featured" class="section fade-in">
+  <h2>Featured Projects</h2>
+
   <!-- Token Dashboard -->
-  <div class="project-card fade-in">
+  <div class="featured-card fade-in">
+    <span class="badge">FEATURED</span>
     <h3>My Token Dashboard</h3>
-    <p>Real-time token price & balance dashboard with a clean, interactive interface.</p>
+    <p>Real-time token prices & wallet balances with advanced UI.</p>
+
+    <div class="tags">
+      <span class="tag">Solidity</span>
+      <span class="tag">Ethers.js</span>
+      <span class="tag">API</span>
+      <span class="tag">Vercel</span>
+    </div>
+
     <a href="https://my-token-dashboard.vercel.app/" target="_blank" class="project-link">Live Demo</a>
   </div>
 
   <!-- Raffle App (Vercel) -->
-  <div class="project-card fade-in">
+  <div class="featured-card fade-in">
+    <span class="badge">FEATURED</span>
     <h3>Raffle App (Vercel)</h3>
-    <p>Decentralized lottery dApp deployed on Vercel with wallet integration and secure smart contracts.</p>
+    <p>Decentralized lottery dApp with wallet integration and contract automation.</p>
+
+    <div class="tags">
+      <span class="tag">Solidity</span>
+      <span class="tag">Ethers.js</span>
+      <span class="tag">Vercel</span>
+    </div>
+
     <a href="https://raffle-app-steel.vercel.app" target="_blank" class="project-link">Live Demo</a>
   </div>
 
   <!-- Gas Fee Tracker -->
-  <div class="project-card fade-in">
+  <div class="featured-card fade-in">
+    <span class="badge">FEATURED</span>
     <h3>Gas Fee Tracker</h3>
-    <p>Track live Ethereum network gas fees using public RPC endpoints and Ethers.js.</p>
+    <p>Live Ethereum gas tracker using public RPC feeds & Ethers.js.</p>
+
+    <div class="tags">
+      <span class="tag">Ethers.js</span>
+      <span class="tag">RPC</span>
+      <span class="tag">GitHub Pages</span>
+    </div>
+
     <a href="https://rishabhdev007.github.io/gas-fee-tracker/" target="_blank" class="project-link">Live Demo</a>
     <a href="https://github.com/Rishabhdev007/gas-fee-tracker" target="_blank" class="project-link">GitHub</a>
   </div>
 
   <!-- Token Price Tracker -->
-  <div class="project-card fade-in">
+  <div class="featured-card fade-in">
+    <span class="badge">FEATURED</span>
     <h3>Token Price Tracker</h3>
-    <p>Live cryptocurrency price tracking using CoinGecko API with smooth UI.</p>
+    <p>Live cryptocurrency price tracker with CoinGecko API integration.</p>
+
+    <div class="tags">
+      <span class="tag">API</span>
+      <span class="tag">JavaScript</span>
+      <span class="tag">GitHub Pages</span>
+    </div>
+
     <a href="https://rishabhdev007.github.io/token-price-tracker/" target="_blank" class="project-link">Live Demo</a>
     <a href="https://github.com/Rishabhdev007/token-price-tracker" target="_blank" class="project-link">GitHub</a>
   </div>
-
-</section>
-  <!-- PROJECTS SECTION -->
-  <section id="projects" class="section fade-in">
-    <h2>My Live Web3 Projects</h2>
-
-    <!-- 1. GAS FEE TRACKER -->
-    <div class="project-card fade-in">
-      <h3>Gas Fee Tracker</h3>
-      <p>Real-time Ethereum gas tracker using Ethers.js and live RPC feeds.</p>
-      <a href="https://rishabhdev007.github.io/gas-fee-tracker/" target="_blank" class="project-link">Live Demo</a>
-      <a href="https://github.com/Rishabhdev007/gas-fee-tracker" target="_blank" class="project-link">GitHub</a>
-    </div>
-
-    <!-- 2. MAIN PORTFOLIO -->
-    <div class="project-card fade-in">
-      <h3>Portfolio Website</h3>
-      <p>My complete Web3 developer portfolio hosted on GitHub Pages.</p>
-      <a href="https://rishabhdev007.github.io/chandan-portfolio/" target="_blank" class="project-link">Live Portfolio</a>
-      <a href="https://github.com/Rishabhdev007/chandan-portfolio" target="_blank" class="project-link">GitHub</a>
-    </div>
-
-    <!-- 3. WALLET BALANCE TRACKER -->
-    <div class="project-card fade-in">
-      <h3>Wallet Balance Tracker</h3>
-      <p>Track ETH or token balance in any wallet using RPC calls.</p>
-      <a href="https://rishabhdev007.github.io/wallet-balance-dapp/" target="_blank" class="project-link">Live Demo</a>
-      <a href="https://github.com/Rishabhdev007/wallet-balance-dapp" target="_blank" class="project-link">GitHub</a>
-    </div>
-
-    <!-- 4. RAFFLE (LOTTERY) DAPP -->
-    <div class="project-card fade-in">
-      <h3>Raffle / Lottery Smart Contract dApp</h3>
-      <p>Users join a lottery pool; smart contract picks a random winner.</p>
-      <a href="https://rishabhdev007.github.io/raffle-app/" target="_blank" class="project-link">Live Demo</a>
-      <a href="https://github.com/Rishabhdev007/raffle-app" target="_blank" class="project-link">GitHub</a>
-    </div>
-
-    <!-- 5. TOKEN PRICE TRACKER -->
-    <div class="project-card fade-in">
-      <h3>Token Price Tracker</h3>
-      <p>Live token prices using CoinGecko API + clean UI.</p>
-      <a href="https://rishabhdev007.github.io/token-price-tracker/" target="_blank" class="project-link">Live Demo</a>
-      <a href="https://github.com/Rishabhdev007/token-price-tracker" target="_blank" class="project-link">GitHub</a>
-    </div>
-
-    <!-- 6. WALLET BALANCE TRACKER (Duplicate Removed) -->
-
-    <!-- 7. SIL Ledger dApp -->
-    <div class="project-card fade-in">
-      <h3>SIM Ledger dApp</h3>
-      <p>Blockchain ledger for recording SIM activities securely.</p>
-      <a href="https://rishabhdev007.github.io/sim-ledger-dapp/" target="_blank" class="project-link">Live Demo</a>
-      <a href="https://github.com/Rishabhdev007/sim-ledger-dapp" target="_blank" class="project-link">GitHub</a>
-    </div>
-
-    <!-- 8. VERCEL RAFFLE DAPP -->
-    <div class="project-card fade-in">
-      <h3>Raffle App (Vercel Deployment)</h3>
-      <p>Vercel version of the Raffle smart contract application.</p>
-      <a href="https://raffle-app-steel.vercel.app" target="_blank" class="project-link">Vercel Demo</a>
-    </div>
-
-    <!-- 9. TOKEN DASHBOARD -->
-    <div class="project-card fade-in">
-      <h3>My Token Dashboard</h3>
-      <p>Token portfolio dashboard with real-time price and balance updates.</p>
-      <a href="https://my-token-dashboard.vercel.app/" target="_blank" class="project-link">Live Demo</a>
-    </div>
-    <!--10. Event Demo-->
-     <div class="project-card">
-      <h3>EventDemo dApp</h3>
-      <p>Smart contract with event logging + MetaMask wallet integration.</p>
-      
-     <a href="https://rishabhdev007.github.io/event-demo/" class="project-link" target="_blank">Live Demo</a>
-      <a href="https://rishabhdev007.github.io/event-demo/" class="project-link" target="_blank">GitHub</a>
-    </div>
 
   </section>
 
