--- a/index.html
+++ b/index.html
@@ -51,45 +51,59 @@
 <section id="featured" class="section fade-in">
   <h2>Featured Projects</h2>
 
-  <section id="featured" class="section fade-in">
-  <h2>Featured Projects</h2>
 
-  <!-- Token Dashboard -->
-  <div class="featured-card fade-in">
-    <span class="badge">FEATURED</span>
-    <h3>My Token Dashboard</h3>
-    <p>Real-time token prices & wallet balances with advanced UI.</p>
+  <section id="projects" class="section fade-in">
+  <h2>All Projects</h2>
+
+  <!-- Wallet Balance Tracker -->
+  <div class="project-card fade-in">
+    <h3>Wallet Balance Tracker</h3>
+    <p>Track ETH or token balances for any wallet address using RPC calls & Ethers.js.</p>
+
+    <div class="tags">
+      <span class="tag">Ethers.js</span>
+      <span class="tag">RPC</span>
+      <span class="tag">GitHub Pages</span>
+    </div>
+
+    <a href="https://rishabhdev007.github.io/wallet-balance-dapp/" target="_blank" class="project-link">Live Demo</a>
+    <a href="https://github.com/Rishabhdev007/wallet-balance-dapp" target="_blank" class="project-link">GitHub</a>
+  </div>
+
+  <!-- SIM Ledger -->
+  <div class="project-card fade-in">
+    <h3>SIM Ledger dApp</h3>
+    <p>Blockchain-powered ledger for recording SIM-based activities in an immutable format.</p>
 
     <div class="tags">
       <span class="tag">Solidity</span>
       <span class="tag">Ethers.js</span>
-      <span class="tag">API</span>
-      <span class="tag">Vercel</span>
+      <span class="tag">GitHub Pages</span>
     </div>
 
-    <a href="https://my-token-dashboard.vercel.app/" target="_blank" class="project-link">Live Demo</a>
+    <a href="https://rishabhdev007.github.io/sim-ledger-dapp/" target="_blank" class="project-link">Live Demo</a>
+    <a href="https://github.com/Rishabhdev007/sim-ledger-dapp" target="_blank" class="project-link">GitHub</a>
   </div>
 
-  <!-- Raffle App (Vercel) -->
-  <div class="featured-card fade-in">
-    <span class="badge">FEATURED</span>
-    <h3>Raffle App (Vercel)</h3>
-    <p>Decentralized lottery dApp with wallet integration and contract automation.</p>
+  <!-- Raffle App (GitHub Pages version) -->
+  <div class="project-card fade-in">
+    <h3>Raffle App (GitHub Version)</h3>
+    <p>Decentralized lottery application deployed on GitHub Pages.</p>
 
     <div class="tags">
       <span class="tag">Solidity</span>
       <span class="tag">Ethers.js</span>
-      <span class="tag">Vercel</span>
+      <span class="tag">GitHub Pages</span>
     </div>
 
-    <a href="https://raffle-app-steel.vercel.app" target="_blank" class="project-link">Live Demo</a>
+    <a href="https://rishabhdev007.github.io/raffle-app/" target="_blank" class="project-link">Live Demo</a>
+    <a href="https://github.com/Rishabhdev007/raffle-app" target="_blank" class="project-link">GitHub</a>
   </div>
 
-  <!-- Gas Fee Tracker -->
-  <div class="featured-card fade-in">
-    <span class="badge">FEATURED</span>
-    <h3>Gas Fee Tracker</h3>
-    <p>Live Ethereum gas tracker using public RPC feeds & Ethers.js.</p>
+  <!-- Gas Fee Tracker (GitHub version) -->
+  <div class="project-card fade-in">
+    <h3>Gas Fee Tracker (GitHub Version)</h3>
+    <p>Track network gas fees in real time using RPC-based queries.</p>
 
     <div class="tags">
       <span class="tag">Ethers.js</span>
@@ -101,24 +115,23 @@
     <a href="https://github.com/Rishabhdev007/gas-fee-tracker" target="_blank" class="project-link">GitHub</a>
   </div>
 
-  <!-- Token Price Tracker -->
-  <div class="featured-card fade-in">
-    <span class="badge">FEATURED</span>
-    <h3>Token Price Tracker</h3>
-    <p>Live cryptocurrency price tracker with CoinGecko API integration.</p>
+  <!-- Portfolio Website -->
+  <div class="project-card fade-in">
+    <h3>Portfolio Website</h3>
+    <p>My full Web3 developer portfolio showcasing dApps, contracts, and deployments.</p>
 
     <div class="tags">
-      <span class="tag">API</span>
+      <span class="tag">HTML</span>
+      <span class="tag">CSS</span>
       <span class="tag">JavaScript</span>
       <span class="tag">GitHub Pages</span>
     </div>
 
-    <a href="https://rishabhdev007.github.io/token-price-tracker/" target="_blank" class="project-link">Live Demo</a>
-    <a href="https://github.com/Rishabhdev007/token-price-tracker" target="_blank" class="project-link">GitHub</a>
+    <a href="https://rishabhdev007.github.io/chandan-portfolio/" target="_blank" class="project-link">Live Demo</a>
+    <a href="https://github.com/Rishabhdev007/chandan-portfolio" target="_blank" class="project-link">GitHub</a>
   </div>
 
-  </section>
-
+</section>
 
   <!-- SERVICES -->
   <section id="services" class="section fade-in">
